--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,14 @@ google_analytics: "UA-46465113-2"
 # UI configs
 title: "Photography by Caleb Sieker"
 subtitle: "See the world through my eyes!"
-author: "Ram Patra"
+author: "Caleb Sieker"
 header:
  title: "Photography"
  subtitle: "by Caleb Sieker"
 footer:
  name: "Hey there, my name is Caleb"
- bio: "I am a student studying in Missouri who has recently been experimenting with photography."
- github: "Want a website like this for yourself for free? Just <a href=\"https://github.com/ramswaroop/photography\">fork this repo on github</a> ;)"
+ bio: "I am origionaly from washington state and I am currently studying nursing in Missouri."
+ github: ""
 web_design: "AJ"
 # Configure which exif data to display
 # Tag is the actual exif tag, icon is a fontawesome icon. Use JSON notation without line breaks
